--- a/package.json
+++ b/package.json
@@ -52,5 +52,14 @@
       "esbuild@<=0.24.2": ">=0.25.0",
       "prismjs@<1.30.0": ">=1.30.0"
     }
+  },
+  "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "@v0-sdk/react": "^0.4.0",
+    "adm-zip": "^0.5.16",
+    "axios": "^1.13.2",
+    "node-stream-zip": "^1.15.0",
+    "unzipper": "^0.12.3",
+    "v0-sdk": "^0.15.0"
   }
 }
